added dev profile to include default user profile